<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_calcu">calcu</string>

    <string name="root">\u221a</string>
    <string name="sin">SIN</string>
    <string name="tan">TAN</string>
    <string name="cos">COS</string>
    <string name="pow2">x2</string>
    <string name="fac">!</string>
</resources>
