<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".calcu">


    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="574dp"
        android:autofillHints=""
        android:background="@android:color/holo_blue_light"
        android:ems="10"
        android:hint="Please Input Number"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="421dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="Result"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="639dp" />

    <Button
        android:id="@+id/b_tan"
        android:layout_width="166dp"
        android:layout_height="86dp"
        android:layout_alignEnd="@+id/et_input"
        android:layout_alignRight="@+id/et_input"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="294dp"
        android:text="@string/tan"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/b_root"
        android:layout_width="168dp"
        android:layout_height="82dp"
        android:layout_alignEnd="@+id/et_input"
        android:layout_alignRight="@+id/et_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:layout_marginBottom="298dp"
        android:text="@string/root"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/b_sin"
        android:layout_width="169dp"
        android:layout_height="83dp"
        android:layout_alignEnd="@+id/et_input"
        android:layout_alignRight="@+id/et_input"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="195dp"
        android:text="@string/sin"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/b_tan"
        tools:layout_editor_absoluteX="36dp" />

    <Button
        android:id="@+id/b_fac"
        android:layout_width="172dp"
        android:layout_height="93dp"
        android:layout_alignEnd="@+id/et_input"
        android:layout_alignRight="@+id/et_input"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="91dp"
        android:text="@string/fac"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/b_tan"
        tools:layout_editor_absoluteX="36dp" />

    <Button
        android:id="@+id/b_cos"
        android:layout_width="165dp"
        android:layout_height="84dp"
        android:layout_alignEnd="@+id/tv_answer"
        android:layout_alignRight="@+id/tv_answer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="228dp"
        android:layout_marginRight="228dp"
        android:layout_marginBottom="197dp"
        android:text="@string/cos"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/b_root"
        tools:layout_editor_absoluteX="225dp" />

    <Button
        android:id="@+id/b_pow2"
        android:layout_width="167dp"
        android:layout_height="89dp"
        android:layout_alignEnd="@+id/tv_answer"
        android:layout_alignRight="@+id/tv_answer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="228dp"
        android:layout_marginRight="228dp"
        android:layout_marginBottom="90dp"
        android:text="@string/pow2"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/b_root"
        tools:layout_editor_absoluteX="225dp" />


</RelativeLayout>